# OpenScope-2C53T

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  decompiled_2C53T.c  decompiled_2C53T_v2.c
docs/: README.md  accessories.md  button_manual.md  code_organization.md  custom_test_platform.md  developer_experience.md  device_testing_plan.md  dfu_mode_guide.md  esp32_coprocessor.md  feature_brainstorm.md  feature_gap_analysis.md  firmware_analysis.md  fpga_protocol.md  function_map.md  fuse_current_tester.md  hardware.md  hardware_test_protocol.md  industry_modules.md  meter_data_format.md  meter_ideas.md  next_session_plan.md  peripheral_map.md  platform_architecture.md  project_ideas.md  reference_projects.md  resource_planning.md  roadmap.md  rtos_analysis.md  status_update_2026_04_09.md  use_cases.md
emulator/: Makefile  emu_2c53t.py  emulator_server.py  lcd_server.py  lcd_viewer.c  pyproject.toml  renode_lcd_bridge.py
emulator/renode/: README.md  adc_peripheral.py  fmc_peripheral.py  fpga_dvom_sim.py  gd32f307_2c53t.repl  interactive_gpio_portb.py  interactive_gpio_portc.py  rcu_peripheral.py  run_2c53t.resc  run_custom.resc  run_diagnostic.resc  run_interactive.resc  run_openscope.resc  run_soak_test.resc  signal_injector.py  soak_gpio_portb.py  soak_gpio_portc.py  st7789v_fast.py  st7789v_peripheral.py  test_boot.resc
emulator/ui/: index.html
firmware/: Makefile  Makefile.hwtest  NEXT_SESSION_PLAN.md  SPI3_HANDSHAKE_BYTE_ACCURATE.md  module.yaml.example
frontend/: index.html  package-lock.json
ghidra_scripts/: TraceStrings.java
(+468 files in other folders)
